<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SpotifyStremer">Spotify Streamer</string>
    <string name="ScoresApp">Scores App</string>
    <string name="LibraryApp">Library App</string>
    <string name="BuildItBigger">Build It Bigger</string>
    <string name="XYZReader">XYZ Reader</string>
    <string name="Capstone">Capstone: My Own App</string>

</resources>
